fix: z-index

--- a/clients/search-component/src/TrieveModal/index.css
+++ b/clients/search-component/src/TrieveModal/index.css
@@ -1,17 +1,17 @@
 body {
   #trieve-search-modal-overlay {
-    @apply bg-black/60 w-screen fixed inset-0 h-screen data-[state=open]:animate-overlayShow backdrop-blur-sm;
+    @apply bg-black/60 w-screen fixed inset-0 h-screen data-[state=open]:animate-overlayShow backdrop-blur-sm z-[998];
   }
 
   #trieve-search-modal {
-    @apply data-[state=open]:animate-contentShow fixed top-[50%] left-[50%] max-h-[80vh] w-[90vw] sm:max-w-[550px] -translate-x-[50%] -translate-y-[50%] rounded-lg bg-zinc-50 p-2 pt-0 shadow-2xl focus:outline-none text-zinc-950 font-sans;
+    @apply data-[state=open]:animate-contentShow fixed top-[50%] left-[50%] max-h-[80vh] w-[90vw] sm:max-w-[550px] -translate-x-[50%] -translate-y-[50%] rounded-lg bg-zinc-50 p-2 pt-0 shadow-2xl focus:outline-none text-zinc-950 font-sans z-[999];
 
     .trieve-elements-search {
       @apply pr-2;
     }
 
     .footer {
-      @apply flex border-t sticky -bottom-2 items-center pt-3 border-zinc-200 px-2 pb-1;
+      @apply flex border-t sticky -bottom-2 items-center pt-3 border-zinc-200 px-2 pb-1 bg-transparent;
 
       .commands {
         @apply flex text-xs grow gap-4 m-0;
